fix body jumping when opening modal

--- a/assets/scss/core/_core.scss
+++ b/assets/scss/core/_core.scss
@@ -32,6 +32,16 @@ html {
     @media (max-width: $media-sm) {
         font-size: 16px;
     }
+
+    &.no-touchevents {
+        body.locked {
+            padding-right: rem(17);
+            
+            // .header {
+            //     padding-right: rem(17);
+            // }
+        }
+    }
 }
 
 body {
